manifests/clickhouse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-service
  namespace: default
spec:
  selector:
    app: clickhouse
  ports:
  - name: http
    port: 8123
    targetPort: 8123
  - name: native
    port: 9000
    targetPort: 9000
  type: ClusterIP
